fix data-framework faltante

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img class="front-face" src="img/lucas.jpg" alt="Lucas">
         <img class="back-face" src="img/stlogo.png" alt="Stranger Things Logo">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" data-framework="lucas">
         <img class="front-face" src="img/lucas.jpg" alt="Lucas">
         <img class="back-face" src="img/stlogo.png" alt="Stranger Things Logo">
     </div>
