--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lan ="es">
     <head>
-<title>MEMORY GAME</title>
+<title> MEMORY GAME</title>
 <meta charset="UTF-8">
+<meta name="viewport" content= "width=device-width, initial-scale=1.0"> 
 <meta name="game" content="memory game">
 <link rel="stylesheet" href="styles.css">
     </head>
